--- a/project3me/templates/added.html
+++ b/project3me/templates/added.html
@@ -6,7 +6,16 @@
 {% block content %}
 {% if user.is_authenticated %}
 
-<a>Added</a><br>
-<a href='/menu'>Continue</a>
+<div class="added">
+<p>Item has been added to cart<p>
+<a class="btn btn-outline-success" href='/menu'>Continue</a>
+</div>
+
+{% else %}
+<h1 id="logincheck">Log in or sign up to order!</h1>
+<button class=" btn btn-light"><a href="{% url 'login' %}">Login</a></button>
+<button class=" btn btn-light"><a href="{% url 'signup' %}">Sign Up</a></button>
+
+
 {% endif %}
 {% endblock %}
