--- a/project3me/templates/base.html
+++ b/project3me/templates/base.html
@@ -5,9 +5,6 @@
   <title>{% block title %}NOCHS{% endblock %}</title>
 
 
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-  <!--   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></head>
 <style>
   a {
@@ -23,6 +20,26 @@
     margin-left:10px;
   }
 
+  #mainmenu,#pizzachoices
+  {
+  font-size:20px;
+  }
+
+  .added
+  {
+    margin-left:10px;
+  }
+
+  #logincheck
+  {
+        margin-left:10px;
+
+  }
+
+  .btn-outline-info
+  {
+    width:200px;
+  }
 
 </style>
 <body>
@@ -45,6 +62,13 @@
          <li class="nav-item">
           <a class="nav-link" href="/about">Contact </a>
         </li>
+
+        {% if request.user.is_superuser %}
+        <li class="nav-item">
+          <a class="nav-link" href="/ordersummary">OrderSummary </a>
+        </li>
+        {% endif %}
+
       </ul>
     </div>
   </nav>
