--- a/project3me/templates/home.html
+++ b/project3me/templates/home.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  <h3>Welcome back, {{ user.username }}!</h3>
+  <h3 id="welcome">Welcome to Pinocchios {{ user.username }}!</h3>
   <button class=" btn btn-light"><a href="{% url 'logout' %}">Logout</a></button>
 {% else %}
   <h3>You are not logged in</h3>
