--- a/project3me/templates/order.html
+++ b/project3me/templates/order.html
@@ -43,7 +43,7 @@
     {% endfor %}
      </tbody>
 <br>
-<h6>Total: {{total}}</h6>
+<h6>Curent Total Due: {{total}}</h6>
 
 {% else %}
 <h1 id="logincheck">Log in or sign up to order!</h1>
