--- a/project3me/templates/about.html
+++ b/project3me/templates/about.html
@@ -9,15 +9,13 @@
 
 <div id="about">
 <h5>Phone:</h5>
-Our phone numbers are 617-876-4897 or 617-876-0012
-<br>
-Our fax number is 617-661-6188
+Our phone numbers are <a href="tel:+6178760012" class="btn btn-outline-secondary">617-876-0012</a>
 <br>
 <h5>Twitter:</h5>
-Find us on Twitter @PinocchiosPizz
+Find us on Twitter <a href="https://twitter.com/pinocchiospizz?lang=en/" class="btn btn-outline-primary">@PinocchiosPizza</a>
 <br>
 <h5>Instagram:</h5>
-And Instagram @pinocchiospizza1
+And Instagram <a href="https://www.instagram.com/pinocchiospizza1/" class="btn btn-outline-primary">@PinocchiosPizza</a>
 <br>
 <h5>Address:</h5>
 Pinocchio's Pizza
@@ -27,7 +25,7 @@ Pinocchio's Pizza
 Cambridge, MA 02138
 <br>
 <h5>Get in touch:</h5>
-If you have any questions or comments or would like to get on our email list you can email us at pinocchiospizza1@gmail.com</a>
+If you have any questions or comments or would like to get on our email list you can email us  <a class="btn btn-outline-primary" href="mailto:pinocchiospizza1@gmail.com">Here</a>
 </div>
 
 
