--- a/project3me/templates/base.html
+++ b/project3me/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}NOCHS{% endblock %}</title>
+
 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></head>
@@ -39,6 +39,7 @@
   .btn-outline-info
   {
     width:200px;
+    font-size:20px;
   }
 
 </style>
@@ -65,7 +66,7 @@
 
         {% if request.user.is_superuser %}
         <li class="nav-item">
-          <a class="nav-link" href="/ordersummary">OrderSummary </a>
+          <a class="nav-link" href="/ordersummary">Orders </a>
         </li>
         {% endif %}
 
