--- a/project3me/templates/menu.html
+++ b/project3me/templates/menu.html
@@ -40,7 +40,7 @@
         </td>
 
 
-<td> <a class=" btn btn-outline-secondary" href="{% url 'add' item item.Price form.Toppings.value  %}">Add To Cart</a> </td>
+<td> <a class=" btn btn-outline-secondary" href="{% url 'add' item item.Price  %}">Add To Cart</a> </td>
     </tr>
      </tbody>
     {% endfor %}
